[gd_scene load_steps=14 format=2]

[ext_resource path="res://models/machine/mdl-machine.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI/themes/hint_object_theme.tres" type="Theme" id=3]
[ext_resource path="res://UI/textured_ui_bar.gd" type="Script" id=4]
[ext_resource path="res://gameobjects/Machine.gd" type="Script" id=5]
[ext_resource path="res://sound/sounds/machine/machine_loop.wav" type="AudioStream" id=6]
[ext_resource path="res://sound/sounds/machine/machine_accept_item.wav" type="AudioStream" id=7]
[ext_resource path="res://item/item_deposit/ItemDeposit.tscn" type="PackedScene" id=8]
[ext_resource path="res://UI/elements/bar_border.png" type="Texture" id=9]
[ext_resource path="res://UI/elements/bar_fill.png" type="Texture" id=10]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.75, 1.5, 0.75 )

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/Info/VBoxContainer/ProgressBar/Label:custom_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/Info/VBoxContainer/NameLabel:custom_colors/font_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CanvasLayer/Info/VBoxContainer/MaterialsLabel:custom_colors/font_color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CanvasLayer/Info/VBoxContainer/ProgressBar:tint_under")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.227451, 0.227451, 0.227451, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("CanvasLayer/Info/VBoxContainer/ProgressBar:tint_progress")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.513726, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "fade_in"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/Info/VBoxContainer/ProgressBar/Label:custom_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/Info/VBoxContainer/NameLabel:custom_colors/font_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CanvasLayer/Info/VBoxContainer/MaterialsLabel:custom_colors/font_color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CanvasLayer/Info/VBoxContainer/ProgressBar:tint_under")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.227451, 0.227451, 0.227451, 0 ), Color( 0.227451, 0.227451, 0.227451, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("CanvasLayer/Info/VBoxContainer/ProgressBar:tint_progress")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.513726, 0, 0, 0 ), Color( 0.513726, 0, 0, 1 ) ]
}

[sub_resource type="BoxShape" id=8]
extents = Vector3( 1.25, 1.5, 1.25 )

[node name="production_machine" type="StaticBody"]
collision_layer = 2
collision_mask = 8
script = ExtResource( 5 )

[node name="mdl-machine" parent="." instance=ExtResource( 1 )]
transform = Transform( 0.75, 0, 0, 0, 0.75, 0, 0, 0, 0.75, 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 6 )
anims/fade_in = SubResource( 7 )

[node name="ManufactureTimer" type="Timer" parent="."]

[node name="AcceptSound" type="AudioStreamPlayer3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 1 )
stream = ExtResource( 7 )
bus = "SoundFX"

[node name="MachineLoop" type="AudioStreamPlayer3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 1 )
stream = ExtResource( 6 )
bus = "SoundFX"

[node name="ItemDeposit" parent="." instance=ExtResource( 8 )]

[node name="CollisionShape" type="CollisionShape" parent="ItemDeposit"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0 )
shape = SubResource( 8 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Info" type="Control" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
mouse_filter = 2
theme = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Info"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -75.0
margin_top = -32.0
margin_right = 75.0
margin_bottom = 32.0
mouse_filter = 2

[node name="NameLabel" type="Label" parent="CanvasLayer/Info/VBoxContainer"]
margin_right = 150.0
margin_bottom = 18.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_colors/font_color = Color( 1, 1, 1, 0 )
text = "machine name"
align = 1
valign = 1

[node name="MaterialsLabel" type="Label" parent="CanvasLayer/Info/VBoxContainer"]
margin_top = 22.0
margin_right = 150.0
margin_bottom = 41.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_colors/font_color = Color( 1, 1, 1, 0 )
text = "materials remaining: 0"
align = 1
valign = 1

[node name="ProgressBar" type="TextureProgress" parent="CanvasLayer/Info/VBoxContainer"]
margin_top = 45.0
margin_right = 150.0
margin_bottom = 64.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
value = 50.0
texture_under = ExtResource( 9 )
texture_progress = ExtResource( 10 )
tint_under = Color( 0.227451, 0.227451, 0.227451, 0 )
tint_progress = Color( 0.513726, 0, 0, 0 )
nine_patch_stretch = true
script = ExtResource( 4 )

[node name="Label" type="Label" parent="CanvasLayer/Info/VBoxContainer/ProgressBar"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 1, 1, 1, 0 )
text = "progress"
align = 1
valign = 1

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -116.5
margin_top = -32.0
margin_right = 116.5
margin_bottom = 32.0
theme = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/PanelContainer"]
margin_left = 6.0
margin_top = 8.0
margin_right = 225.0
margin_bottom = 54.0

[node name="Label" type="Label" parent="CanvasLayer/PanelContainer/VBoxContainer"]
margin_right = 219.0
margin_bottom = 21.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "Next Button to Press"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/PanelContainer/VBoxContainer"]
margin_top = 25.0
margin_right = 219.0
margin_bottom = 46.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button" type="Button" parent="CanvasLayer/PanelContainer/VBoxContainer/HBoxContainer"]
margin_right = 70.0
margin_bottom = 21.0
size_flags_horizontal = 3
text = "ASSEMBLE"

[node name="Button2" type="Button" parent="CanvasLayer/PanelContainer/VBoxContainer/HBoxContainer"]
margin_left = 74.0
margin_right = 144.0
margin_bottom = 21.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "ALIGN"

[node name="Button3" type="Button" parent="CanvasLayer/PanelContainer/VBoxContainer/HBoxContainer"]
margin_left = 148.0
margin_right = 219.0
margin_bottom = 21.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "CAUTERIZE"

[connection signal="timeout" from="ManufactureTimer" to="." method="_on_ManufactureTimer_timeout"]
[connection signal="body_entered" from="ItemDeposit" to="." method="_on_ItemDeposit_body_entered"]
[connection signal="pressed" from="CanvasLayer/PanelContainer/VBoxContainer/HBoxContainer/Button" to="." method="button_press" binds= [ 0 ]]
[connection signal="pressed" from="CanvasLayer/PanelContainer/VBoxContainer/HBoxContainer/Button2" to="." method="button_press" binds= [ 1 ]]
[connection signal="pressed" from="CanvasLayer/PanelContainer/VBoxContainer/HBoxContainer/Button3" to="." method="button_press" binds= [ 2 ]]
